# student_grade_tracker-

./: PROJECT_GRADE_TRACKER.docx  README.md  STUDY_GUIDE.md  course_metrics_report.csv  courses_export.csv  gradebook_report.txt  grades.db  grades_export.csv  pyproject.toml  students_export.csv  test_courses.csv  test_grades.csv  test_students.csv
src/notenverwaltung/: app.py  exceptions.py  gradebook.py  reports.py  storage.py
src/notenverwaltung/models/: course.py  grade.py  student.py
tests/: test_course.py  test_grade.py  test_gradebook.py  test_reports.py  test_student.py
