[project]
name = "grade-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gwarrar", email = "ghyath147@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.19.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
